社员档案文案优化

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -1998,7 +1998,7 @@ function getIsManager(){
 		   	  if(result!=null){
 			       var village = "<strong>小区名：</strong>"+result.village_name+"<br>";
 			       var store = "<strong>门店名：</strong>"+result.store_name+"<br>";
-                   var real_store = "<strong>真实门店：</strong>"+result.real_store_name+"<br>";
+                   var real_store = "<strong>实际门店：</strong>"+result.real_store_name+"<br>";
  			   	   var area = "<strong>片区名：</strong><a style=\"color:#000\" href=\"javascript:searchArea('"+result.area_name+"','"+result.area_code+"')\">"+result.area_name+"</a><br>";
  			   	   var areacode = "<strong>片区编号：</strong><a style=\"color:#000\" href=\"javascript:searchArea('"+result.area_name+"','"+result.area_code+"')\">"+result.area_code+"</a><br>";
 			       var position = "";
