--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -254,6 +254,7 @@
                                 <tbody id="manual_tbody">
                                 <tr id="auto_title">
                                     <th width="10%">社员手机号</th>
+                                    <th width="10%">开通渠道</th>
                                     <th width="10%">注册国安社区时间</th>
                                     <th width="10%">社员开卡时间</th>
                                     <th width="10%">社员等级过期时间</th>
@@ -702,8 +703,7 @@
                         var mobilephone = jData[i].mobilephone;
                         var cphone="<strong>手机号：</strong>"+mobilephone+"<br>";
                         var csource="<strong>用户来源：</strong>"+jData[i].customer_source+"<br>";
-                        var ctype="<strong>开通渠道：</strong>"+jData[i].member_type;
-                        var phonecontent =cphone+csource+ctype+"@phonetips"+i;
+                        var phonecontent =cphone+csource+"@phonetips"+i;
                         var phoneid = "phonetips"+i;
                         var city_name = jData[i].city_name;
                         var store_name = jData[i].store_name;
@@ -712,6 +712,7 @@
                         infoStr= "<tr>";
                         infoStr= infoStr
                             +"<td><a style=\"text-decoration:underline\" href=\"javascript:showuserprofile('"+jData[i].customer_id+"','"+mobilephone+"','"+city_name+"','"+store_name+"','"+store_no+"','"+ocdate+"')\" onmouseover=\"showphone('"+phonecontent+"');\" id=\""+phoneid+"\">"+mobilephone.replace(/(\d{3})\d{4}(\d{4})/, '$1****$2')+"</a></td>"
+                            +"<td>"+jData[i].member_type+"</td>"
                             +"<td>"+regist+"</td>"
                             +"<td>"+opencard+"</a></td>"
                             +"<td>"+expiry+"</a></td>";
